# CV_Search_ChatBot

./: .gitignore  pyproject.toml
data/cvs/: Lukasz.Kuklis.pptx  Marcin Zielinski PPES (ATC) Poland CV.pptx  readme.txt
src/rag_chatbot/: ingest.py
src/rag_chatbot/exception/: custom_exceptions.py
src/rag_chatbot/ingestion/: chromadb_collection.py  chunker.py  embedder.py  pptx_loader.py
src/rag_chatbot/retrieval/: query_service.py
tests/: test_pptx_loader.py
